--- a/index.html
+++ b/index.html
@@ -420,13 +420,13 @@
 		<table style="width=900px">
 			<tr>
 				<td>
-					<img src="./2.2/zhuyilong.jpeg" align="middle" width="250px" />
+					<img src="./2.2/zhuyilong1.jpg" align="middle" width="250px" />
 					<figcaption align="middle">
 						He acts
 					</figcaption>
 				</td>
 				<td>
-					<img src="./2.2/yuwenzhou.jpeg" align="middle" width="250px" />
+					<img src="./2.2/yuwenzhou1.jpg" align="middle" width="250px" />
 					<figcaption align="middle">
 						He plays video games
 					</figcaption>
@@ -578,27 +578,15 @@
 			<tr>
 				<td>
 					<img src="./2.3/lincoln_gaus0.jpg" align="middle" width="200px" />
-					<figcaption align="middle">
-						Looking afar
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/lincoln_gaus1.jpg" align="middle" width="200px" />
-					<figcaption align="middle">
-						Blurred
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/lincoln_gaus2.jpg" align="middle" width="200px" />
-					<figcaption align="middle">
-						Sharpened again
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/lincoln_gaus3.jpg" align="middle" width="200px" />
-					<figcaption align="middle">
-						Sharpened again
-					</figcaption>
 				</td>					
 			</tr>
 		</table>
@@ -612,27 +600,15 @@
 			<tr>
 				<td>
 					<img src="./2.3/lincoln_lap0.png" align="middle" width="200px" />
-					<figcaption align="middle">
-						Looking afar
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/lincoln_lap1.png" align="middle" width="200px" />
-					<figcaption align="middle">
-						Blurred
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/lincoln_lap2.png" align="middle" width="200px" />
-					<figcaption align="middle">
-						Sharpened again
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/lincoln_lap3.png" align="middle" width="200px" />
-					<figcaption align="middle">
-						Sharpened again
-					</figcaption>
 				</td>				
 			</tr>
 		</table>
@@ -646,27 +622,15 @@
 			<tr>
 				<td>
 					<img src="./2.3/draco_gaus0.jpg" align="middle" width="200px" />
-					<figcaption align="middle">
-						Looking afar
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/draco_gaus1.jpg" align="middle" width="200px" />
-					<figcaption align="middle">
-						Blurred
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/draco_gaus2.jpg" align="middle" width="200px" />
-					<figcaption align="middle">
-						Sharpened again
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/draco_gaus3.jpg" align="middle" width="200px" />
-					<figcaption align="middle">
-						Sharpened again
-					</figcaption>
 				</td>					
 			</tr>
 		</table>
@@ -680,27 +644,15 @@
 			<tr>
 				<td>
 					<img src="./2.3/draco_lap0.png" align="middle" width="200px" />
-					<figcaption align="middle">
-						Looking afar
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/draco_lap1.png" align="middle" width="200px" />
-					<figcaption align="middle">
-						Blurred
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/draco_lap2.png" align="middle" width="200px" />
-					<figcaption align="middle">
-						Sharpened again
-					</figcaption>
 				</td>
 				<td>
 					<img src="./2.3/draco_lap3.png" align="middle" width="200px" />
-					<figcaption align="middle">
-						Sharpened again
-					</figcaption>
 				</td>					
 			</tr>
 		</table>
@@ -720,13 +672,13 @@
 		<table style="width=100%">
 			<tr>
 				<td>
-					<img src="./2.4/apple.jpeg" align="middle" width="200px" />
+					<img src="./2.4/apple.jpg" align="middle" width="200px" />
 					<figcaption align="middle">
 						Apple
 					</figcaption>
 				</td>
 				<td>
-					<img src="./2.4/orange.jpeg" align="middle" width="200px" />
+					<img src="./2.4/orange.jpg" align="middle" width="200px" />
 					<figcaption align="middle">
 						Orange
 					</figcaption>
