--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 	<div class="w3-container" id="about">
 	  <div class="w3-content" style="max-width:800px">
 	    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Hybrid Images</span></h5>
-	    <p> In this part, I created hybrid images taking advantage of how human perception works. Humans are naturally more sensitive to high frequencies if looking at an image from a short distance, while more sensitive to low frequencies when lookinf from afar. Thus, this set of hybrid images are created by aligning a low-frequency image with another high-frequency image, creating an illusion of the image being one thing at a short distance but another at a longer distance. </p>
+	    <p> In this part, I created hybrid images taking advantage of how human perception works. Humans are naturally more sensitive to high frequencies if looking at an image from a short distance, while more sensitive to low frequencies when looking from afar. Thus, this set of hybrid images are created by aligning a low-frequency image with another high-frequency image, creating an illusion of the image being one thing at a short distance but another at a longer distance. </p>
 	    <p>Enjoy!</p>
 	  </div>
 	</div>
